implemented a tab nav bar to change day of week in schedule

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,17 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">UoL Timetable</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
     <string name="title_activity_login">Sign in</string>
     <!-- Strings related to login -->
     <string name="email_txt_box">Email</string>
     <string name ="password_txt_box">password</string>
     <string name ="login_button">Sign in</string>
+    <!-- Strings related to nav_menu -->
+    <string name="nav_schedule">Schedule</string>
+    <string name="nav_calendar">Calendar</string>
+    <string name="nav_attendance">Attendance</string>
+    <string name="nav_sign_out">Sign Out</string>
+    <string name="nav_group_account">Account</string>
+
+
 </resources>
