--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="title_activity_login">Sign in</string>
     <!-- Strings related to login -->
-    <string name="email_txt_box">Email</string>
+    <string name="username_txt_box">Username</string>
     <string name ="password_txt_box">password</string>
     <string name ="login_button">Sign in</string>
     <!-- Strings related to nav_menu -->
@@ -15,6 +15,7 @@
     <string name="nav_attendance">Attendance</string>
     <string name="nav_sign_out">Sign Out</string>
     <string name="nav_group_account">Account</string>
+    <string name="login_as_lecturer">Login as Lecturer</string>
 
 
 </resources>
